# lp-recuperacao-2025

./: .gitignore  README.md  RECUP_LP_2025.md
backend/backend-api/: Dockerfile  backend-api.cabal
backend/backend-api/src/: Main.hs
frontend/: index.html  script.js
