cabal-version:       2.2

name:                backend-api
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/backend-api#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2025 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

executable backend-api
  main-is:             Main.hs
  hs-source-dirs:      src

  build-depends:
      base >=4.7 && <5
    , scotty
    , http-types
    , aeson
    , text

  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/backend-api
