cabal-version:       2.4
name:                backend-api
version:             0.1.0.0
build-type:          Simple

executable backend-api
  main-is:           Main.hs
  hs-source-dirs:    src
  default-language:  Haskell2010

  build-depends:
      base >= 4.7 && < 5
    , scotty
    , http-types
    , aeson
    , text
